Divisão da página realizada e início da estruturação do menu de montagem da blusa

--- a/index.html
+++ b/index.html
@@ -17,15 +17,87 @@
 
     <title>Fashion Driven</title>
 </head>
+<!-- onload="perguntaNome()" -->
 
 <body>
+    <!-- Cabeçalho concluído -->
     <header>
         <img src="./FashionDriven/Logo.png" alt="Logo da FashionDriven">
     </header>
 
-    <main>opções</main>
+    <main>
+        <div class="menu-opcoes">
+            <div class="modelos">
+                <h1>Escolha o modelo</h1>
+                <div class="opcoes">
+                    <div class="opcao">
+                        <img src="./FashionDriven/tshirt.png" alt="Modelo de t-shirt">
+                        <h2>T-shirt</h2>
+                    </div>
+                    <div class="opcao">
+                        <img src="./FashionDriven/Camiseta.png" alt="Modelo de camiseta">
+                        <h2>Camiseta</h2>
+                    </div>
+                    <div class="opcao">
+                        <img src="./FashionDriven/Mangalonga.png" alt="Modelo de camisa de manga longa">
+                        <h2>Manga longa</h2>
+                    </div>
+                </div>
+            </div>
 
-    <footer>Últimos pedidos</footer>
+            <div class="golas">
+                <h1>Escolha a gola</h1>
+                <div class="opcoes">
+                    <div class="opcao">
+                        <img src="./FashionDriven/GolaV.png" alt="Modelo de camisa de gola v">
+                        <h2>Gola V</h2>
+                    </div>
+                    <div class="opcao">
+                        <img src="./FashionDriven/GolaRedonda.png" alt="Modelo de camisa de gola redonda">
+                        <h2>Gola Redonda</h2>
+                    </div>
+                    <div class="opcao">
+                        <img src="./FashionDriven/GolaPolo.png" alt="Modelo de camisa de gola polo">
+                        <h2>Gola Polo</h2>
+                    </div>
+                </div>
+            </div>
+
+            <div class="tecidos">
+                <h1>Escolha o tecido</h1>
+                <div class="opcoes">
+                    <div class="opcao">
+                        <img src="./FashionDriven/Seda.png" alt="Tecido de seda">
+                        <h2>Seda</h2>
+                    </div>
+                    <div class="opcao">
+                        <img src="./FashionDriven/Algodão.png" alt="Tecido de algodão">
+                        <h2>Algodão</h2>
+                    </div>
+                    <div class="opcao">
+                        <img src="./FashionDriven/Poliester.png" alt="Tecido de poliéster">
+                        <h2>Poliéster</h2>
+                    </div>
+                </div>
+            </div>
+
+            <div class="img-referencia">
+                <h1>Imagem de referência</h1>
+                <input type="text" placeholder="Insira o link">
+            </div>
+        </div>
+
+        <div class="ilustracao">
+            <img src="./FashionDriven/ilustração.png" alt="Ilustração de uma modelo com cores ao fundo">
+        </div>
+    </main>
+
+    <footer>
+        <h1>Últimos pedidos</h1>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
