--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-Br">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -17,84 +17,109 @@
 
     <title>Fashion Driven</title>
 </head>
-<!-- onload="perguntaNome()" -->
 
 <body>
     <!-- Cabeçalho concluído -->
     <header>
         <img src="./FashionDriven/Logo.png" alt="Logo da FashionDriven">
     </header>
-
+    <!--
+    onclick="selecionaOpcaoDeModelo(this)"
+    onclick="selecionaOpcaoDeModelo(this)" -->
     <main>
-        <div class="menu-opcoes">
-            <div class="modelos">
-                <h1>Escolha o modelo</h1>
-                <div class="opcoes">
-                    <div class="opcao">
-                        <img src="./FashionDriven/tshirt.png" alt="Modelo de t-shirt">
-                        <h2>T-shirt</h2>
+        <aside class="conteudo-esquerdo">
+            <div class="menu-opcoes">
+                <section class="modelos escolha">
+                    <h1>Escolha o modelo</h1>
+                    <div class="opcoes">
+                        <div class="opcao">
+                            <div class="image" id="t-shirt" onclick="selecionaOpcaoDeModelo(this)">
+                                <img src="./FashionDriven/tshirt.png" alt="Modelo de t-shirt">
+                            </div>
+                            <h2>T-shirt</h2>
+                        </div>
+                        <div class="opcao">
+                            <div class="image" id="top-tank" onclick="selecionaOpcaoDeModelo(this)">
+                                <img src="./FashionDriven/Camiseta.png" alt="Modelo de camiseta">
+                            </div>
+                            <h2>Camiseta</h2>
+                        </div>
+                        <div class="opcao">
+                            <div class="image" id="long" onclick="selecionaOpcaoDeModelo(this)">
+                                <img src="./FashionDriven/Mangalonga.png" alt="Modelo de camisa de manga longa">
+                            </div>
+                            <h2>Manga longa</h2>
+                        </div>
                     </div>
-                    <div class="opcao">
-                        <img src="./FashionDriven/Camiseta.png" alt="Modelo de camiseta">
-                        <h2>Camiseta</h2>
+                </section>
+
+                <section class="golas escolha">
+                    <h1>Escolha a gola</h1>
+                    <div class="opcoes">
+                        <div class="opcao">
+                            <div class="image" id="v-neck" onclick="selecionaOpcaoDeGola(this)">
+                                <img src="./FashionDriven/GolaV.png" alt="Modelo de camisa de gola v">
+                            </div>
+                            <h2>Gola V</h2>
+                        </div>
+                        <div class="opcao">
+                            <div class="image" id="round" onclick="selecionaOpcaoDeGola(this)">
+                                <img src="./FashionDriven/GolaRedonda.png" alt="Modelo de camisa de gola redonda">
+                            </div>
+                            <h2>Gola Redonda</h2>
+                        </div>
+                        <div class="opcao">
+                            <div class="image" id="polo" onclick="selecionaOpcaoDeGola(this)">
+                                <img src="./FashionDriven/GolaPolo.png" alt="Modelo de camisa de gola polo">
+                            </div>
+                            <h2>Gola Polo</h2>
+                        </div>
                     </div>
-                    <div class="opcao">
-                        <img src="./FashionDriven/Mangalonga.png" alt="Modelo de camisa de manga longa">
-                        <h2>Manga longa</h2>
+                </section>
+
+                <section class="tecidos escolha">
+                    <h1>Escolha o tecido</h1>
+                    <div class="opcoes">
+                        <div class="opcao">
+                            <div class="image" id="silk" onclick="selecionaOpcaoDeTecido(this)">
+                                <img src="./FashionDriven/Seda.png" alt="Tecido de seda">
+                            </div>
+                            <h2>Seda</h2>
+                        </div>
+                        <div class="opcao">
+                            <div class="image" id="cotton" onclick="selecionaOpcaoDeTecido(this)">
+                                <img src="./FashionDriven/Algodão.png" alt="Tecido de algodão">
+                            </div>
+                            <h2>Algodão</h2>
+                        </div>
+                        <div class="opcao">
+                            <div class="image" id="polyester" onclick="selecionaOpcaoDeTecido(this)">
+                                <img src="./FashionDriven/Poliester.png" alt="Tecido de poliéster">
+                            </div>
+                            <h2>Poliéster</h2>
+                        </div>
                     </div>
+                </section>
+
+                <div class="img-referencia">
+                    <h1>Imagem de referência</h1>
+                    <input id="url" type="text" onchange="recebeLink(this.value)" placeholder="Insira o link">
                 </div>
-            </div>
 
-            <div class="golas">
-                <h1>Escolha a gola</h1>
-                <div class="opcoes">
-                    <div class="opcao">
-                        <img src="./FashionDriven/GolaV.png" alt="Modelo de camisa de gola v">
-                        <h2>Gola V</h2>
-                    </div>
-                    <div class="opcao">
-                        <img src="./FashionDriven/GolaRedonda.png" alt="Modelo de camisa de gola redonda">
-                        <h2>Gola Redonda</h2>
-                    </div>
-                    <div class="opcao">
-                        <img src="./FashionDriven/GolaPolo.png" alt="Modelo de camisa de gola polo">
-                        <h2>Gola Polo</h2>
-                    </div>
-                </div>
+                <button class="botao-desativado botao">Confirmar Pedido</button>
             </div>
+        </aside>
 
-            <div class="tecidos">
-                <h1>Escolha o tecido</h1>
-                <div class="opcoes">
-                    <div class="opcao">
-                        <img src="./FashionDriven/Seda.png" alt="Tecido de seda">
-                        <h2>Seda</h2>
-                    </div>
-                    <div class="opcao">
-                        <img src="./FashionDriven/Algodão.png" alt="Tecido de algodão">
-                        <h2>Algodão</h2>
-                    </div>
-                    <div class="opcao">
-                        <img src="./FashionDriven/Poliester.png" alt="Tecido de poliéster">
-                        <h2>Poliéster</h2>
-                    </div>
-                </div>
-            </div>
-
-            <div class="img-referencia">
-                <h1>Imagem de referência</h1>
-                <input type="text" placeholder="Insira o link">
-            </div>
-        </div>
-
-        <div class="ilustracao">
-            <img src="./FashionDriven/ilustração.png" alt="Ilustração de uma modelo com cores ao fundo">
+        <div class="conteudo-direito">
+            <figure class="ilustracao">
+                <img src="./FashionDriven/ilustração.png" alt="Ilustração de uma modelo com cores ao fundo">
+            </figure>
         </div>
     </main>
 
-    <footer>
+    <!-- <footer>
         <h1>Últimos pedidos</h1>
-    </footer>
+    </footer> -->
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./script.js"></script>
