projeto funcional, layout e parte lógica terminados

--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
                 </ul>
             </section>
 
-            <section class="img-referencia secao">
+            <section class="img-referencia">
                 <h1>Imagem de referência</h1>
                 <input id="url" type="text" onchange="recebeLink(this.value)" placeholder="Insira o link">
             </section>
 
-            <section class="button secao">
+            <section class="button">
                 <button class="botao-desativado botao">Confirmar Pedido</button>
             </section>
         </div>
